--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -10,7 +10,7 @@ body{
     border-radius: 0.5rem;
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
     position: absolute;
-    top: 55%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%); 
     margin:10px;   
@@ -23,15 +23,25 @@ body{
     text-align: center;
     color: #000;
   }
-  
-  .input-container {
-    position: relative;
+  .Email{
+    margin-right: 250px;
+  }
+  .Password{
+    margin-right: 220px;
+    margin-top: 10px;
   }
   
-  .input-container input, .form button {
+  input-container {
+    position: relative;
+  } 
+  
+  .input-container input {
     outline: none;
     border: 1px solid #e5e7eb;
-    margin: 8px 0;
+    margin: 3px 0;
+  }
+  button{
+margin: 20px 0 10px 0 ;
   }
   
   .input-container input {
@@ -71,9 +81,7 @@ body{
   .signup-link a {
     text-decoration: underline;
   }
-  .img-container{
-    display:inline-flexbox
-  }
+  
   .img6{
     position: absolute;
     top:100px ;
@@ -82,7 +90,10 @@ body{
     padding-bottom: 50px;
   }
   .img7{
-    margin-top: 15px;
+    position: absolute;
+    top:100px ;
+    left:650px ;
+    
   
   }
   .img5{
@@ -94,6 +105,7 @@ body{
   }
   .img4{
     margin-right: 750px;
+    margin-top: 250px;
     
     
     
