--- a/src/front/styles/Hero.css
+++ b/src/front/styles/Hero.css
@@ -114,7 +114,7 @@
 .hero {
   /* background: linear-gradient(rgba(255, 107, 107, 0.8), rgba(255, 230, 109, 0.8)), url('/hero-bg.jpg'); */
 
-  height: 100vh;
+  height: 61vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -135,16 +135,28 @@
   background-position: center;
   width: 100%;
   z-index: -22;
-  height: 100vh;
+  height: auto;
   display: flex;
  
   color: #fff;
+  
 }
 .hero-content {
   max-width: 800px;
-  padding: 2rem;
+  padding: 1rem;
+   display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-end;
+    margin-top: 99px;
+    margin-bottom: 1rem;
 }
+.home-container{
+ 
+  height: 100vh;
+  margin-bottom: 2rem;
 
+}
 .hero h1 {
   font-size: 3.5rem;
   margin-bottom: 1rem;
@@ -453,7 +465,14 @@ width: 75%;
   align-content: space-between;
   align-items: center;
   justify-content: space-between;
+  margin: 1rem;
  }
  .hero{
   margin:0 auto;
+ }
+
+ .image-container {
+
+    margin-top: 7rem;
+    margin-right: 2rem;
  }
