--- a/src/front/styles/Navbar.css
+++ b/src/front/styles/Navbar.css
@@ -222,5 +222,6 @@
     align-items: center;
    width: 100%;
     color: white;
-   background: #FFC909
+   /* background: #FFC909; */
+   position: absolute;
   }
