--- a/src/front/styles/footer.css
+++ b/src/front/styles/footer.css
@@ -2,7 +2,7 @@
     background-color:  #171717;
     padding: 25px;
     text-align: center;
-    position: relative;
+    /* position: relative; */
   }
   
   .footer-content {
