--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -1,8 +1,16 @@
-body{
-    background-color: #FFC909;
+
+root{
+  --primary: #FFC909;
+  --secondary: #9C29B2;
+
 }
+
+/* body{
+    background-color: #FFC909;
+} */
+ /* no pongan el body amarillo, no todo es amarillo */
 /*estilos login*/
-.form {
+/* .form {
     background-color: #fff;
     display: block;
     padding: 1rem;
@@ -12,10 +20,10 @@ body{
     position: absolute;
     top: 60%;
     left: 50%;
-    transform: translate(-50%, -50%); 
-    margin:10px;   
-  }
-  
+    transform: translate(-50%, -50%);
+    margin:10px;
+  } */
+
   .form-title {
     font-size: 1.25rem;
     line-height: 1.75rem;
@@ -30,11 +38,11 @@ body{
     margin-right: 220px;
     margin-top: 10px;
   }
-  
+
   input-container {
     position: relative;
-  } 
-  
+  }
+
   .input-container input {
     outline: none;
     border: 1px solid #e5e7eb;
@@ -43,7 +51,7 @@ body{
   button{
 margin: 20px 0 10px 0 ;
   }
-  
+
   .input-container input {
     background-color: #fff;
     padding: 1rem;
@@ -54,7 +62,7 @@ margin: 20px 0 10px 0 ;
     border-radius: 0.5rem;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
   }
-  
+
   .submit {
     display: block;
     padding-top: 0.75rem;
@@ -70,18 +78,18 @@ margin: 20px 0 10px 0 ;
     border-radius: 0.5rem;
     text-transform: uppercase;
   }
-  
+
   .signup-link {
     color: #6B7280;
     font-size: 0.875rem;
     line-height: 1.25rem;
     text-align: center;
   }
-  
+
   .signup-link a {
     text-decoration: underline;
   }
-  
+
   .img6{
     position: absolute;
     top:100px ;
@@ -93,21 +101,21 @@ margin: 20px 0 10px 0 ;
     position: absolute;
     top:100px ;
     left:650px ;
-    
-  
+
+
   }
   .img5{
     margin-left: 900px;
     position: absolute;
     top:450px ;
     left:150px ;
-    
+
   }
   .img4{
     margin-right: 750px;
     margin-top: 250px;
-    
-    
-    
-    
+
+
+
+
   }
