se conecto back con front en footer

--- a/src/front/styles/footer.css
+++ b/src/front/styles/footer.css
@@ -123,6 +123,7 @@
     border: none;
     padding: 8.5px 7px;
     border-top-left-radius: 6px; border-bottom-left-radius: 6px;
+    color: #ffffff;
   }
   
   .info-container {
