--- a/src/front/styles/Getintouch.css
+++ b/src/front/styles/Getintouch.css
@@ -18,7 +18,7 @@
 }
 .get-in-touch {
   text-align: center;
-  color: #ffd700;
+  color: #ff9900;
   font-size: 1.2rem;
   font-weight: 900;
   margin-bottom: 0.5rem;
@@ -110,7 +110,7 @@
   font-size: 2.5rem;
   line-height: 2rem;
 }
-.star {
+.star,.get-in-touch {
   animation: twinkle 2s infinite;
 }
 @keyframes twinkle {
