--- a/src/front/styles/Events.css
+++ b/src/front/styles/Events.css
@@ -9,7 +9,7 @@ body{
     margin-top: 20px;
     margin-bottom: 20px;
 }
-.image-container{
+.image-container-events{
     height: 350px;
     width: 150px;
     border-radius: 10px;
