se agrego link a contact us en el footer

--- a/src/front/styles/ConfirmAttendance.css
+++ b/src/front/styles/ConfirmAttendance.css
@@ -18,7 +18,7 @@
   textarea::placeholder {
     color: white; /* Color blanco para el placeholder */
 }
- .buttonConfirmAttendance{
+ .buttonConfirmAttendance-form{
     width: 20rem;
     height: 3rem;
     background-color: #FFC909;
