add handleChangeFormEvents function

--- a/src/front/styles/ConfirmAttendance.css
+++ b/src/front/styles/ConfirmAttendance.css
@@ -5,7 +5,7 @@
     border-radius: 10px;
    
 }
-.FullName{
+.FullName,.EventSelection,.ParentName,.SpecialRequest{
     color: #FFC909;
 }
 .input-fullName {
