fixed issues with the PR

--- a/src/front/styles/ConfirmAttendance.css
+++ b/src/front/styles/ConfirmAttendance.css
@@ -5,7 +5,7 @@
     border-radius: 10px;
    
 }
-.FullName{
+.FullName,.EventSelection,.ParentName,.SpecialRequest{
     color: #FFC909;
 }
 .input-fullName {
@@ -25,3 +25,7 @@
     border-radius: 5px;
     color:black
  } 
+ .events_selection option{
+    background-color: #9C29B2;
+    color: #FFC909;                                                                                                         
+ }
