--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -5,3 +5,6 @@
     one more css for each page that will contain the selected used 
     on that page only (the ones not reused in other pages).
 */
+.edu{
+    clip-path: ellipse(100% 60% at 50% 100%); 
+}
