--- a/src/front/styles/Getintouch.css
+++ b/src/front/styles/Getintouch.css
@@ -9,10 +9,7 @@
 .form-container {
   width: 100%;
   max-width: 80%;
-  /* background-color: #ffe5cc; */
-  /* background-image: url("/bgGetinT.png"); */
   padding: 5.5rem;
-  /* border-radius: 1rem; */
   position: relative;
   background-size: cover;
 }
@@ -46,7 +43,7 @@
   background-color: rgba(255, 255, 255, 0.9);
 }
 .form-textarea {
-  width: 100%;
+  width: 100% !important;
   padding: 0.75rem;
   border: none;
   border-radius: 0.375rem;
@@ -119,4 +116,11 @@
   75% { opacity: 0.8; }
   100% { opacity: 1; }  
  
+}
+.getintext{
+  color: #81520a;
+  font-size: 1.4rem;
+  font-weight: 900;
+  margin-bottom: 0.5rem;
+  letter-spacing: 0.05em;
 }
