--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -8,3 +8,26 @@
 .edu{
     clip-path: ellipse(100% 60% at 50% 100%); 
 }
+@import url("https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap");
+
+@keyframes twinkle {
+  0%,
+  100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  75% {
+    opacity: 0.8;
+  }
+}
+
+.tw-animate-twinkle {
+  animation: twinkle 2s infinite;
+}
+
+.tw-font-comic {
+  font-family: "Comic Neue", "Comic Sans MS", "Comic Sans", cursive;
+}
+
