--- a/src/front/styles/Navbar.css
+++ b/src/front/styles/Navbar.css
@@ -184,6 +184,8 @@
   align-items: center;
   width: 100%;
   color: white;
+  position: relative;
+  z-index: 2;
 }
 
 @media (max-width: 1024px) {
