--- a/src/front/styles/Hero.css
+++ b/src/front/styles/Hero.css
@@ -488,3 +488,49 @@ width: 75%;
     margin-top: 7rem;
     margin-right: 2rem;
  }
+ @media (max-width: 768px) {
+  .hero h1 {
+      font-size: 2.5rem;
+  }
+
+  .hero p {
+      font-size: 1.2rem;
+  }
+
+  .feature-grid {
+      grid-template-columns: 1fr;
+  }
+
+  .timeline::after {
+      left: 31px;
+  }
+
+  .timeline-item {
+      width: 100%;
+      padding-left: 70px;
+      padding-right: 25px;
+  }
+
+  .timeline-item::after {
+      left: 15px;
+  }
+
+  .timeline-item:nth-child(even) {
+      left: 0%;
+  }
+
+  .hero-background{
+    display: none;
+  }
+  .styled-text{
+    font-size: 2rem;
+  }
+  .hero  {
+    display: block;
+  }
+  .styled-text-p{
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 10px;
+  }
+}
